# pdk-ci-workflow-public

./: .pre-commit-hooks.yaml  CLAUDE.md  README.md  pyproject.toml
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: README.md  claude-pr-review.yml  cut-release.yml  drc.yml  issue.yml  model_coverage.yml  model_regression.yml  pages.yml  pre_commit.yml  release-drafter.yml  release.yml  test-sample-projects.yml  test_code.yml  test_coverage.yml  test_hooks.yml  update_badges.yml
actions/: README.md
hooks/: README.md  _utils.py  check_cells_structure.py  check_hook_freshness.py  check_makefile_targets.py  check_no_raw_layers.py  check_pdk_object.py  check_pyproject_sections.py  check_required_files.py  check_tech_structure.py  check_template_drift.py  check_test_structure.py  check_uv_lock_tracked.py  check_version_sync.py  check_workflows.py
scripts/: README.md  build_cell.py
templates/: .pre-commit-config.yaml  README.md
templates/.github/workflows/: code-security.yml  issue.yml  release.yml  test_code.yml
tests/: conftest.py  test_check_cells_structure.py  test_check_hook_freshness.py  test_check_makefile_targets.py  test_check_multi_band.py  test_check_no_main_in_cells.py  test_check_no_raw_layers.py  test_check_package_init.py  test_check_pdk_object.py  test_check_precommit_config.py  test_check_pyproject_sections.py  test_check_required_files.py  test_check_tech_structure.py  test_check_template_drift.py  test_check_test_structure.py  test_check_uv_lock_tracked.py  test_check_version_sync.py  test_check_workflows.py  test_precommit_hooks_yaml.py  test_sample_project_discovery.py  test_utils.py  test_variant_preparation.py  test_workflow_yaml.py
tests/examples/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tests/examples/.changelog.d/: changelog_template.jinja
tests/examples/.github/workflows/: release-drafter.yml  test_code.yml
tests/examples/my_pdk/: __init__.py  pdk.py  tech.py
tests/examples/my_pdk/cells/: __init__.py  waveguides.py
tests/examples/tests/: test_pdk.py
